# MultiStrat

./: .replit  backtest_individual.py  config.py  create_local_params.py  create_object_storage.py  fetch.py  main.py  object_storage.py  pyproject.toml  requirements.txt  strategy.py  streamlit_app.py  telegram_bot.py  trading.py
app/: __init__.py  main.py  routers.py
app/api/: dependencies.py
app/api/endpoints/: __init__.py  assets.py  health.py  optimization.py  portfolios.py
app/core/: config.py  scheduler.py
app/database/: models.py  session.py
app/database/repository/: assets.py  portfolios.py  strategies.py
app/services/: allocation_service.py  data_service.py  execution_service.py  optimization_service.py  portfolio_service.py
app/static/css/: main.css
app/static/js/: dashboard.js
app/templates/: assets.html  index.html  layout.html  optimization.html  performance.html  portfolios.html  settings.html  strategies.html
app/utils/: logging.py  metrics.py
attached_assets/: .windsurfrules  all assets.txt  backtest_individual.py
helpers/: all assets curated.txt  correl.py
